--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "race-pace",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/solid-js": "^3.0.1",
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.0.12",
-    "solid-js": "^1.7.11",
-    "tailwindcss": "^3.3.3"
-  }
+    "name": "race-pace",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/solid-js": "^3.0.1",
+        "@astrojs/tailwind": "^5.0.0",
+        "astro": "^3.0.12",
+        "solid-js": "^1.7.11",
+        "tailwindcss": "^3.3.3"
+    },
+    "devDependencies": {
+      "prettier": "^3.0.0",
+      "prettier-plugin-tailwindcss": "^0.5.1"
+    }
 }
